[project]
name = "ena"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gremlinpython",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "pandas>=3.0.1",
    "psycopg2-binary==2.9.9",
    "sqlalchemy>=2.0.48",
    "sqlite-utils>=3.39",
]
